@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: textIndex.test,v 1.1.4.5 1999/03/24 02:55:03 hershey Exp $
+# RCS: @(#) $Id: textIndex.test,v 1.1.4.6 1999/03/27 02:31:40 redman Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     source [file join [pwd] [file dirname [info script]] defs.tcl]
@@ -639,6 +639,17 @@ test textIndex-15.14 {StartEnd} {
 test textIndex-15.15 {StartEnd} {
     list [catch {.t index {2.12 word}} msg] $msg
 } {1 {bad text index "2.12 word"}}
+
+test testIndex-16.1 {TkTextPrintIndex} {
+    set t [text .t2]
+    $t insert end \n
+    $t window create end -window [button $t.b]
+    set result [$t index end-2c]
+    pack $t
+    catch {destroy $t}
+
+    set result
+} 1.1
 
 # cleanup
 rename textimage {}
